@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+	<file original="" product-name="Cobweb.ExternalImport" source-language="en" datatype="plaintext">
+		<body>
+			<trans-unit id="syncRunning" xml:space="preserve">
+				<source>Synchronisation is running</source>
+			</trans-unit>
+			<trans-unit id="doNotLeaveWindow" xml:space="preserve">
+				<source>Do not leave the current window until it reloads.</source>
+			</trans-unit>
+		</body>
+	</file>
+</xliff>
