@@ -73,7 +73,7 @@
 								</f:link.action>
 								<f:if condition="{configuration.writeAccess}">
 									<f:then>
-										<f:link.action action="synchronize" arguments="{table: configuration.table, index: configuration.index}" title="{f:translate(key: 'synchronise')}" class="btn btn-default">
+										<f:link.action action="synchronize" arguments="{table: configuration.table, index: configuration.index}" title="{f:translate(key: 'synchronise')}" class="btn btn-default sync-button">
 											<core:icon identifier="actions-refresh" />
 										</f:link.action>
 									</f:then>
