@@ -2,6 +2,7 @@
 
 	* Added handling of disabled Scheduler tasks, resolves #54
 	* Replaced :class: construct in documentation, resolves #46
+	* Added message about running synchronisation, resolves #50
 
 2018-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
